Fixed gap with footer, changed footer text from gray on gray to black on gray

--- a/rtportfolio/src/styles/style.css
+++ b/rtportfolio/src/styles/style.css
@@ -47,6 +47,10 @@ footer {
     min-height: 5em;
 }
 
+.footer-link {
+    color:var(--slate);
+}
+
 /* Images */
 
 .proj-container {
